--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,7 +1,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif;
+    /*font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif;*/
+
+    /*font-family: "Noto Sans CJK SC", "Source Han Sans CN", sans-serif !important;*/
 }
 
 html, body {
