--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,15 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    /*font-family: Lato, "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", sans-serif;*/
-
-    /*font-family: "Noto Sans CJK SC", "Source Han Sans CN", sans-serif !important;*/
 }
 
 
 html, body {
     width: 100%;
     height: 100%;
+    font-family: Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", STHeiti, "华文细黑", sans-serif;
+    font-size: 14px;
 }
 
 body {
@@ -149,7 +148,7 @@ a, span {
 }
 
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 600px) {
     * {
         font-size: 13px;
     }
