--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: 'webfont';
+    font-display: swap;
+    src: url('//at.alicdn.com/t/webfont_4ea5rzn0cr.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/webfont_4ea5rzn0cr.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/webfont_4ea5rzn0cr.woff2') format('woff2'),
+    url('//at.alicdn.com/t/webfont_4ea5rzn0cr.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/webfont_4ea5rzn0cr.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/webfont_4ea5rzn0cr.svg#NotoSansHans-DemiLight') format('svg'); /* iOS 4.1- */
+}
+
+/*.web-font {*/
+/*    font-family: "webfont" !important;*/
+/*    font-size: 16px;*/
+/*    font-style: normal;*/
+/*    -webkit-font-smoothing: antialiased;*/
+/*    -webkit-text-stroke-width: 0.2px;*/
+/*    -moz-osx-font-smoothing: grayscale;*/
+/*}*/
+
 * {
     margin: 0;
     padding: 0;
@@ -7,8 +24,15 @@
 html, body {
     width: 100%;
     height: 100%;
-    font-family: Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", STHeiti, "华文细黑", sans-serif;
-    font-size: 14px;
+    /*font-family: Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", STHeiti, "华文细黑", sans-serif;*/
+    /*font-size: 14px;*/
+
+    font-family: "webfont" !important;
+    font-size: 16px;
+    font-style: normal;
+    /*-webkit-font-smoothing: antialiased;*/
+    /*-webkit-text-stroke-width: 0.2px;*/
+    /*-moz-osx-font-smoothing: grayscale;*/
 }
 
 body {
