--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -6,36 +6,20 @@
     url('//at.alicdn.com/t/webfont_4ea5rzn0cr.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/webfont_4ea5rzn0cr.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/webfont_4ea5rzn0cr.svg#NotoSansHans-DemiLight') format('svg'); /* iOS 4.1- */
 }
 
-/*.web-font {*/
-/*    font-family: "webfont" !important;*/
-/*    font-size: 16px;*/
-/*    font-style: normal;*/
-/*    -webkit-font-smoothing: antialiased;*/
-/*    -webkit-text-stroke-width: 0.2px;*/
-/*    -moz-osx-font-smoothing: grayscale;*/
-/*}*/
-
 * {
     margin: 0;
     padding: 0;
 }
 
-
 html, body {
     width: 100%;
     height: 100%;
-    /*font-family: Helvetica, Arial, "Hiragino Sans GB", "Microsoft Yahei", "微软雅黑", STHeiti, "华文细黑", sans-serif;*/
-    /*font-size: 14px;*/
-
-    font-family: "webfont" !important;
-    font-size: 16px;
-    font-style: normal;
-    /*-webkit-font-smoothing: antialiased;*/
-    /*-webkit-text-stroke-width: 0.2px;*/
-    /*-moz-osx-font-smoothing: grayscale;*/
 }
 
 body {
+    font-size: 15px;
+    font-family: "webfont" !important;
+    font-style: normal;
     /*background-size: auto;*/
     /*background-color: #ece5da;*/
     /*background-image: url(https://img.bidianer.com/skin/002.jpg);*/
@@ -131,12 +115,10 @@ a, span {
     background-color: cornsilk;
     border: 1px solid lightgrey;
     border-radius: 3px;
+    font-size: 13px;
 
     display: grid;
-    /*grid-row-gap: 3px;*/
-
     line-height: 25px;
-    font-size: 13px;
 }
 
 .content-wd {
@@ -150,7 +132,6 @@ a, span {
     height: 100%;
     outline: none;
     border: none;
-    font-size: 15px;
     cursor: pointer;
     color: white;
     background-color: #409eff;
@@ -168,16 +149,24 @@ a, span {
 
 
 .btn-warn:hover {
-    background-color: coral;
+    background-color: #eb9904;
 }
 
 
+.btn-error {
+    background-color: orangered;
+}
+
+.btn-error:hover {
+    background-color: red;
+}
+
 @media screen and (max-width: 600px) {
-    * {
+    body {
         font-size: 13px;
     }
 
-    .btn {
-        font-size: 13px;
+    .tips {
+        font-size: 12px;
     }
 }
