--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -15,7 +15,8 @@
     --primary: #007bff;
     --secondary: #6c757d;
     --success: #28a745;
-    --info: #17a2b8;
+    /*--info: #17a2b8;*/
+    --info: #009688;
     --warning: #ffc107;
     --danger: #dc3545;
     --light: #f8f9fa;
