--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -45,6 +45,7 @@
 }
 
 html, body {
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
 }
@@ -191,6 +192,25 @@ a, span {
 
 .btn-error:hover {
     background-color: red;
+}
+
+
+.srcoll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.srcoll::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+.srcoll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #FFF;
+    /*background-color: var(--primary);*/
+    background-image: -webkit-linear-gradient(top, #e4f5fc 0%, #bfe8f9 50%, #9fd8ef 51%, #2ab0ed 100%);
 }
 
 @media screen and (max-width: 600px) {
